--- a/CameraDetectorDemo/build.gradle
+++ b/CameraDetectorDemo/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
-
 android {
     defaultConfig {
         applicationId "com.affectiva.cameradetectordemo"
         versionName "3.2.0-01"
     }
+    buildToolsVersion '27.0.1'
+    compileSdkVersion 26
 }
-
 apply from: "../module-defaults.gradle"
 
+dependencies {
+}
