--- a/ServiceFrameDetectorDemo/build.gradle
+++ b/ServiceFrameDetectorDemo/build.gradle
@@ -11,8 +11,8 @@ apply from: "../module-defaults.gradle"
 
 // override some module defaults
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.1'
 
     defaultConfig {
         targetSdkVersion 23
