--- a/module-defaults.gradle
+++ b/module-defaults.gradle
@@ -1,8 +1,8 @@
 // this file contains common configurations for all submodules in the project
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.1'
 
     defaultConfig {
         minSdkVersion 21
